--- a/banking.html
+++ b/banking.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Bangking Site</h1>
+    <header>
+        <h1 class="text-5xl text-center font-semibold mt-14">Let's get some <span class="text-blue-800">Mooooooney</span>!!!</h1>
+    </header>
+    <main>
+        <section class="grid grid-cols-3 w-3/4 mx-auto mt-8 gap-4 text-white">
+            <div class="bg-sky-300 p-8 rounded">
+                <h3 class="text-3xl">Deposit</h3>
+                <h2 class="text-4xl">$00</h2>
+            </div>
+            <div class="bg-green-300 p-8 rounded">
+                <h3 class="text-3xl">Withdraw</h3>
+                <h2 class="text-4xl">$00</h2>
+            </div>
+            <div class="bg-yellow-300 p-8 rounded">
+                <h3 class="text-3xl">Balance</h3>
+                <h2 class="text-4xl">$1200</h2>
+            </div>
+        </section>
+
+        <section class="grid grid-cols-2 w-3/4 mt-4 text-white mx-auto font-semibold gap-4">
+            <div class="bg-red-300 p-16 rounded">
+                <input id="deposit-input" class="block rounded px-2 py-1" type="text" placeholder="$Deposit your amount">
+                <button id="deposit-btn" class="bg-yellow-300 rounded px-2 py-1 mt-4">Deposit</button>
+            </div>
+            <div class="bg-purple-100 p-16 rounded">
+                <input id="withdraw-input" class="block rounded px-2 py-1" type="text" placeholder="$withdraw your amount">
+                <button id="withdraw-btn" class="bg-yellow-300 rounded px-2 py-1 mt-4">Withdraw</button>
+            </div>
+            
+        </section>
+    </main>
 </body>
 </html>
