mini bank initiali done

--- a/banking.html
+++ b/banking.html
@@ -8,35 +8,38 @@
 </head>
 <body>
     <header>
-        <h1 class="text-5xl text-center font-semibold mt-14">Let's get some <span class="text-blue-800">Mooooooney</span>!!!</h1>
+        <h1 class="text-5xl text-center font-semibold mt-8">Let's get some <span class="text-blue-800">Mooooooney</span>!!!</h1>
     </header>
     <main>
         <section class="grid grid-cols-3 w-3/4 mx-auto mt-8 gap-4 text-white">
             <div class="bg-sky-300 p-8 rounded">
                 <h3 class="text-3xl">Deposit</h3>
-                <h2 class="text-4xl">$00</h2>
+                <h2 class="text-4xl">$<span id ="deposit-amount">00</span></h2>
             </div>
             <div class="bg-green-300 p-8 rounded">
                 <h3 class="text-3xl">Withdraw</h3>
-                <h2 class="text-4xl">$00</h2>
+                <h2 class="text-4xl">$<span id ="withdraw-amount">00</span></h2>
             </div>
             <div class="bg-yellow-300 p-8 rounded">
                 <h3 class="text-3xl">Balance</h3>
-                <h2 class="text-4xl">$1200</h2>
+                <h2 class="text-4xl">$<span id ="deposit-total-balance">00</span></h2>
             </div>
         </section>
 
         <section class="grid grid-cols-2 w-3/4 mt-4 text-white mx-auto font-semibold gap-4">
-            <div class="bg-red-300 p-16 rounded">
-                <input id="deposit-input" class="block rounded px-2 py-1" type="text" placeholder="$Deposit your amount">
-                <button id="deposit-btn" class="bg-yellow-300 rounded px-2 py-1 mt-4">Deposit</button>
+            <div class="bg-red-100 p-16 rounded">
+                <h3 class="text-2xl mb-2 text-black">Please Deposit</h3>
+                <input id="deposit-input" class="block rounded px-2 py-1 text-black" type="text" placeholder="$Deposit your amount">
+                <button id="deposit-btn" class="bg-yellow-500 rounded px-2 py-1 mt-4">Deposit</button>
             </div>
             <div class="bg-purple-100 p-16 rounded">
-                <input id="withdraw-input" class="block rounded px-2 py-1" type="text" placeholder="$withdraw your amount">
-                <button id="withdraw-btn" class="bg-yellow-300 rounded px-2 py-1 mt-4">Withdraw</button>
+                <h3 class="text-2xl mb-2 text-black">Please Withdraw</h3>
+                <input id="withdraw-input" class="block rounded px-2 py-1 text-black" type="text" placeholder="$Withdraw your amount">
+                <button id="withdraw-btn" class="bg-yellow-500 rounded px-2 py-1 mt-4">Withdraw</button>
             </div>
             
         </section>
     </main>
+    <script src="bangking.js"></script>
 </body>
 </html>
